--- a/Supervision.html
+++ b/Supervision.html
@@ -6239,6 +6239,12 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Bachelor thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Karlos Napa Häger </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Filip Norgren </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonas Magnusson </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oliver Eliardsson &amp; Oliver Ziethén </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hrushikesh Thanikonda &amp; Akula Sai Pankaj </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Zentio </font></font></li>
 	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tim Lagerqvist + Paulina Frisk </font></font></li>
 
  </ul> 
