--- a/Supervision.html
+++ b/Supervision.html
@@ -6245,7 +6245,7 @@ function recaptchaOnload() {
 	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oliver Eliardsson &amp; Oliver Ziethén </font></font></li>
 	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hrushikesh Thanikonda &amp; Akula Sai Pankaj </font></font></li>
 	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Zentio </font></font></li>
-	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tim Lagerqvist + Paulina Frisk </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tim Lagerqvist &amp; Paulina Frisk </font></font></li>
 
  </ul> 
 <p>&nbsp;</p> 
@@ -6281,7 +6281,7 @@ function recaptchaOnload() {
 	</div>
 
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
