--- a/Publications.html
+++ b/Publications.html
@@ -6434,9 +6434,10 @@ function recaptchaOnload() {
 						<b>A Polarizing Filter Function for Real-Time Rendering</b>
 						<br/>
 						Viktor Enfeldt, Prashant Goswami
-						<br/><i>Journal of Computer Graphics Techniques (JCGT), Conditionally accepted</i>, 2021 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><i>Journal of Computer Graphics Techniques (JCGT)</i>, 2021 <br/>
+						<a href="http://jcgt.org/published/0010/02/03/paper.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=3nMkQh3mKsI" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<a href="http://jcgt.org/published/0010/02/03/" target="_blank">[<font color="#0547f6">JCGT Page</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
 </ul>
