--- a/Publications.html
+++ b/Publications.html
@@ -6434,10 +6434,19 @@ function recaptchaOnload() {
 						<b>A Polarizing Filter Function for Real-Time Rendering</b>
 						<br/>
 						Viktor Enfeldt, Prashant Goswami
-						<br/><i>Journal of Computer Graphics Techniques (JCGT)</i>, 2021 <br/>
+						<br/><i>Journal of Computer Graphics Techniques (JCGT), pp. 59-82, Vol. 10, Num. 2</i>, 2021 <br/>
 						<a href="http://jcgt.org/published/0010/02/03/paper.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=3nMkQh3mKsI" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<a href="http://jcgt.org/published/0010/02/03/" target="_blank">[<font color="#0547f6">JCGT Page</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/VisualComp2020.png"/>
+						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
+						<br/>
+						 Prashant Goswami
+						<br/><i> The Visual Computer, pp. 1931-1948, Vol. 37, Num. 7 </i>, 2021 <br/>
+						<a href="https://bth.diva-portal.org/smash/get/diva2:1458441/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						
 						<br/><br/><br/><br/><br/>
 				</li>
 </ul>
@@ -6454,20 +6463,11 @@ function recaptchaOnload() {
 						<a href="https://www.youtube.com/watch?v=nfAcK8XSSFc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
-<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/VisualComp2020.png"/>
-						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
-						<br/>
-						 Prashant Goswami
-						<br/><i> The Visual Computer, doi: 10.1007/s00371-020-01953-y </i>, 2020 <br/>
-						<a href="https://bth.diva-portal.org/smash/get/diva2:1458441/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
-						
-						<br/><br/><br/><br/><br/>
-</li>
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/LiteratureReview19.png"/>
 						<b>A literature review of current technologies on health data integration for patient-centered health management</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai
-						<br/><i>Health Informatics Journal, ISSN 1460-4582, E-ISSN 1741-2811, doi:10.1177/146045821989238 </i>, 2020 <br/>
+						<br/><i>Health Informatics Journal, pp.1926-1951, Vol. 26, Num. 3 </i>, 2020 <br/>
 						<a href="https://journals.sagepub.com/doi/10.1177/1460458219892387" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6500,7 +6500,7 @@ function recaptchaOnload() {
 						<b>Meaningful Integration of Data from Heterogeneous Health Services and Home Environment Based on Ontology</b>
 						<br/>
 						Peng Cong, Prashant Goswami
-						<br/><i>Sensors 2019, 19(8), 1747; doi: 10.3390/s19081747</i>, 2019 <br/>
+						<br/><i>Sensors 2019, Art. 1747, Vol. 19, Num. 8</i>, 2019 <br/>
 						<a href="https://www.mdpi.com/1424-8220/19/8/1747/htm" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6521,7 +6521,7 @@ function recaptchaOnload() {
 						<b>Linking Health Web Services as Resource Graph by Semantic REST Resource Tagging</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai
-						<br/><i>International Conference on Current and Future trends of Info. and Comm. Tech. in Healthcare</i>, 2018 <br/>
+						<br/><i> International Conference on Current and Future trends of Info. and Comm. Tech. in Healthcare (Procedia Computer Science), pp. 319-326 </i>, 2018 <br/>
 						<a href="https://reader.elsevier.com/reader/sd/pii/S1877050918318441?token=7194D285293716810A831FFA1CDE0A96A16F4CD180B3A65A5AA47E41C9075559DE126065355A29D47D564EDD55E59A0D" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6529,7 +6529,7 @@ function recaptchaOnload() {
 						<b>Fuzzy Matching of OpenAPI Described REST Services</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai 
-						<br/><i>International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, pp. 1333-1322 </i>, 2018 <br/>
+						<br/><i> International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, (Procedia Computer Science), pp. 1333-1322,</i>, 2018 <br/>
 						<a href="https://reader.elsevier.com/reader/sd/pii/S1877050918313590?token=611B6CF754FD8CE405F2D00DDCE1CAF8C7F31DF426763E45DA1AD572C9278A86F71B2654B849876F16579E1BAA658052" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
@@ -6537,7 +6537,7 @@ function recaptchaOnload() {
 						<b>Anomaly-Aware Traffic Prediction Based on Automated Conditional Information Fusion</b>
 						<br/>
 						Bin Sun, Wei Cheng, Liyao Ma, Prashant Goswami
-						<br/><i>IEEE Proceedings of International Conference on Information Fusion, pp. 2283-2289 </i>, 2018 <br/>
+						<br/><i> IEEE Proceedings of International Conference on Information Fusion, pp. 2283-2289 </i>, 2018 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1242011/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
@@ -6545,7 +6545,7 @@ function recaptchaOnload() {
 						<b>Short-term traffic forecasting using self-adjusting k-nearest neighbours</b>
 						<br/>
 						 Bin Sun, Wei Cheng, Prashant Goswami, Guohua Bai 
-						<br/><i>IET Intelligent Transport Systems,  pp. 412-418,  Volume: 12, Issue 1 </i>, 2018 <br/>
+						<br/><i>IET Intelligent Transport Systems,  pp. 412-418,  Vol. 12, Num. 1 </i>, 2018 <br/>
 						<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8267184&tag=1" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6557,7 +6557,7 @@ function recaptchaOnload() {
 						<b>An Improved k-Nearest Neighbours Method for Traffic Time Series Imputation</b>
 						<br/>
 						Bin Sun, L. Ma, Wei Cheng, Wei Wen, Prashant Goswami, Guohua Bai 
-						<br/><i>Chinese Automation Congress (CAC)</i>, 2017 <br/>
+						<br/><i> Chinese Automation Congress (CAC), pp. 7346-7351</i>, 2017 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1145422/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6582,7 +6582,7 @@ function recaptchaOnload() {
 						<b>An Overview of Parameter and Data Strategies for k-Nearest Neighbours Based Short-Term Traffic Prediction</b>
 						<br/>
 						Bin Sun, Wei Cheng, Prashant Goswami, Guohua Bai  
-						<br/><i>ACM International Conference Proceeding Series Volume Part F133326, Association for Computing Machinery (ACM), pp. 68-74,</i>, 2017 <br/>
+						<br/><i> ACM International Conference Proceeding Series Volume Part F133326, Association for Computing Machinery (ACM), pp. 68-74</i>, 2017 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1145423/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>		
@@ -6590,7 +6590,7 @@ function recaptchaOnload() {
 						<b>Correcting and complementing freeway traffic accident data using Mahalanobis distance based outlier detection</b>
 						<br/>
 						Bin Sun, Wei Cheng, Guohua Bai, Prashant Goswami
-						<br/><i>Technical Gazette, ISSN 1330-3651, E-ISSN 1848-6339, Vol. 24, no 5, p. 1597-1607,</i>, 2017 <br/>
+						<br/><i>Technical Gazette,  pp. 1597-1607, Vol. 24, no 5,</i>, 2017 <br/>
 						<a href="https://www.researchgate.net/publication/315677027_Correcting_and_Complementing_Freeway_Traffic_Accident_Data_Using_Mahalanobis_Distance_Based_Outlier_Detection target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>			
@@ -6654,7 +6654,7 @@ function recaptchaOnload() {
 						<b>A novel simulation framework based on information asymmetry to evaluate evacuation plan</b>
 						<br/>
 						 Xiaodong Che, Yu Niu, Bin Shui, Jianbo Fu, Guangzheng Fei, Prashant Goswami, Yanci Zhang
-						<br/><i>Proceedings of Computer Graphics International, The Visual Computer 31(6-8): 853-861</i>, 2015 <br/>
+						<br/><i>Proceedings of Computer Graphics International, The Visual Computer, pp.853-861, Vol. 31, Num. 6</i>, 2015 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00371-015-1119-6" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6684,7 +6684,7 @@ function recaptchaOnload() {
 						<b>An Interactive Computational Design Tool for Large Reciprocal Frame Structures</b>
 						<br/>
 						Peng Song, Chi-Wing Fu, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or
-						<br/><i>Nexus Network Journal, Volume 16, pp. 109-118 </i>, 2014 <br/>
+						<br/><i>Nexus Network Journal, pp. 109-118, Vol. 16, Num. 1  </i>, 2014 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00004-014-0173-0" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6696,7 +6696,7 @@ function recaptchaOnload() {
 						<b>Reciprocal Frame Structures Made Easy</b>
 						<br/>
 						 Peng Song*, Chi-Wing Fu*, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or (*: joint first authors)
-						<br/><i> ACM Transactions on Graphics (TOG) - SIGGRAPH 2013 Conference Proceedings (TOG) Volume 32 Issue 4, Article No. 94 </i>, 2013 <br/>
+						<br/><i> ACM Transactions on Graphics (TOG) - SIGGRAPH 2013 Conference Proceedings (TOG), Art. 94, Vol. 32, Num. 4 </i>, 2013 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/ReciprocalFrameStructures_2013.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=5lNQgoGB9-Q" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6718,7 +6718,7 @@ function recaptchaOnload() {
 						<b>An efficient multi-resolution framework for high quality interactive rendering of massive point clouds using multi-way kd-trees</b>
 						<br/>
 						 Prashant Goswami, Fatih Erol, Rahul Mukhi, Renato Pajarola, Enrico Gobbetti
-						<br/><i> The Visual Computer, Volume 29 Number 1, pp. 69-83 </i>, 2013 (accepted 2012) <br/>
+						<br/><i> The Visual Computer, pp. 69-83, Vol. 29, Num. 1  </i>, 2013 <br/>
 						<a href="http://www.crs4.it/vic/data/papers/tvc2013-mwkdtrees.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=ZS3ITMYeMmA" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
