--- a/Publications.html
+++ b/Publications.html
@@ -6444,7 +6444,7 @@ function recaptchaOnload() {
 						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
 						<br/>
 						 Prashant Goswami
-						<br/><i> The Visual Computer, pp. 1931-1948, Vol. 37, Num. 7 </i>, 2021 <br/>
+						<br/><i> The Visual Computer, pp. 1931-1948, Vol. 37, Num. 7</i>, 2021 <br/>
 						<a href="https://bth.diva-portal.org/smash/get/diva2:1458441/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
@@ -6458,7 +6458,7 @@ function recaptchaOnload() {
 						<b>Asynchronous Liquids: Regional Time Stepping for Faster SPH and PCISPH</b>
 						<br/>
 						Prashant Goswami, Christopher Batty
-						<br/><i>arXiv:2009.14514 </i>, 2020 <br/>
+						<br/><i>arXiv:2009.14514</i>, 2020 <br/>
 						<a href="https://arxiv.org/pdf/2009.14514.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=nfAcK8XSSFc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6467,7 +6467,7 @@ function recaptchaOnload() {
 						<b>A literature review of current technologies on health data integration for patient-centered health management</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai
-						<br/><i>Health Informatics Journal, pp.1926-1951, Vol. 26, Num. 3 </i>, 2020 <br/>
+						<br/><i>Health Informatics Journal, pp.1926-1951, Vol. 26, Num. 3</i>, 2020 <br/>
 						<a href="https://journals.sagepub.com/doi/10.1177/1460458219892387" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6482,7 +6482,7 @@ function recaptchaOnload() {
 						<b>Interactive animation of single-layer cumulus clouds using cloud map</b>
 						<br/>
 						Prashant Goswami
-						<br/><i>ISSN: 2617-4855, Smart Tools and Apps for Graphics (STAG) - Eurographics Italian Chapter Conference </i>, 2019 <br/>
+						<br/><i>ISSN: 2617-4855, Smart Tools and Apps for Graphics (STAG) - Eurographics Italian Chapter Conference</i>, 2019 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1371271/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=9rRVfMT-H3c&t=7s" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6521,7 +6521,7 @@ function recaptchaOnload() {
 						<b>Linking Health Web Services as Resource Graph by Semantic REST Resource Tagging</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai
-						<br/><i> International Conference on Current and Future trends of Info. and Comm. Tech. in Healthcare (Procedia Computer Science), pp. 319-326 </i>, 2018 <br/>
+						<br/><i> International Conference on Current and Future trends of Info. and Comm. Tech. in Healthcare (Procedia Computer Science), pp. 319-326</i>, 2018 <br/>
 						<a href="https://reader.elsevier.com/reader/sd/pii/S1877050918318441?token=7194D285293716810A831FFA1CDE0A96A16F4CD180B3A65A5AA47E41C9075559DE126065355A29D47D564EDD55E59A0D" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6529,7 +6529,7 @@ function recaptchaOnload() {
 						<b>Fuzzy Matching of OpenAPI Described REST Services</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai 
-						<br/><i> International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, (Procedia Computer Science), pp. 1333-1322,</i>, 2018 <br/>
+						<br/><i> International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, (Procedia Computer Science), pp. 1333-1322</i>, 2018 <br/>
 						<a href="https://reader.elsevier.com/reader/sd/pii/S1877050918313590?token=611B6CF754FD8CE405F2D00DDCE1CAF8C7F31DF426763E45DA1AD572C9278A86F71B2654B849876F16579E1BAA658052" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
@@ -6537,7 +6537,7 @@ function recaptchaOnload() {
 						<b>Anomaly-Aware Traffic Prediction Based on Automated Conditional Information Fusion</b>
 						<br/>
 						Bin Sun, Wei Cheng, Liyao Ma, Prashant Goswami
-						<br/><i> IEEE Proceedings of International Conference on Information Fusion, pp. 2283-2289 </i>, 2018 <br/>
+						<br/><i> IEEE Proceedings of International Conference on Information Fusion, pp. 2283-2289</i>, 2018 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1242011/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
@@ -6545,7 +6545,7 @@ function recaptchaOnload() {
 						<b>Short-term traffic forecasting using self-adjusting k-nearest neighbours</b>
 						<br/>
 						 Bin Sun, Wei Cheng, Prashant Goswami, Guohua Bai 
-						<br/><i>IET Intelligent Transport Systems,  pp. 412-418,  Vol. 12, Num. 1 </i>, 2018 <br/>
+						<br/><i>IET Intelligent Transport Systems,  pp. 412-418,  Vol. 12, Num. 1</i>, 2018 <br/>
 						<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8267184&tag=1" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6590,7 +6590,7 @@ function recaptchaOnload() {
 						<b>Correcting and complementing freeway traffic accident data using Mahalanobis distance based outlier detection</b>
 						<br/>
 						Bin Sun, Wei Cheng, Guohua Bai, Prashant Goswami
-						<br/><i>Technical Gazette,  pp. 1597-1607, Vol. 24, no 5,</i>, 2017 <br/>
+						<br/><i>Technical Gazette,  pp. 1597-1607, Vol. 24, no 5,</i> 2017 <br/>
 						<a href="https://www.researchgate.net/publication/315677027_Correcting_and_Complementing_Freeway_Traffic_Accident_Data_Using_Mahalanobis_Distance_Based_Outlier_Detection target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>			
@@ -6645,7 +6645,7 @@ function recaptchaOnload() {
 						<b>Implicit Incompressible SPH on the GPU</b>
 						<br/>
 						 Prashant Goswami, André Eliasson*, Pontus Franzén*  (* indicated equal contribution)
-						<br/><i>Proceedings of Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS) </i>, 2015 <br/>
+						<br/><i>Proceedings of Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS)</i>, 2015 <br/>
 						<a href="http://www.diva-portal.org/smash/get/diva2:872994/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=UtWWABHYd-Q" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6675,7 +6675,7 @@ function recaptchaOnload() {
 						<b>Regional Time Stepping for SPH</b>
 						<br/>
 						 Prashant Goswami, Christopher Batty
-						<br/><i>Proceedings Short Papers, Eurographics, pp. 45-48 </i>, 2014 <br/>
+						<br/><i>Proceedings Short Papers, Eurographics, pp. 45-48</i>, 2014 <br/>
 						<a href="https://hal.inria.fr/hal-00980592/document" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=wgDAfvKfaQI" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6684,7 +6684,7 @@ function recaptchaOnload() {
 						<b>An Interactive Computational Design Tool for Large Reciprocal Frame Structures</b>
 						<br/>
 						Peng Song, Chi-Wing Fu, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or
-						<br/><i>Nexus Network Journal, pp. 109-118, Vol. 16, Num. 1  </i>, 2014 <br/>
+						<br/><i>Nexus Network Journal, pp. 109-118, Vol. 16, Num. 1</i>, 2014 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00004-014-0173-0" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6696,7 +6696,7 @@ function recaptchaOnload() {
 						<b>Reciprocal Frame Structures Made Easy</b>
 						<br/>
 						 Peng Song*, Chi-Wing Fu*, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or (*: joint first authors)
-						<br/><i> ACM Transactions on Graphics (TOG) - SIGGRAPH 2013 Conference Proceedings (TOG), Art. 94, Vol. 32, Num. 4 </i>, 2013 <br/>
+						<br/><i> ACM Transactions on Graphics (TOG) - SIGGRAPH 2013 Conference Proceedings (TOG), Art. 94, Vol. 32, Num. 4</i>, 2013 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/ReciprocalFrameStructures_2013.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=5lNQgoGB9-Q" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6710,7 +6710,7 @@ function recaptchaOnload() {
 						<b>Level-of-Detail and Parallel Solutions in Computer Graphics</b>
 						<br/>
 						 Prashant Goswami
-						<br/><i>PhD Thesis (University of Zürich) </i>, 2012 <br/>
+						<br/><i>PhD Thesis (University of Zürich)</i>, 2012 <br/>
 						<a href="https://www.zora.uzh.ch/id/eprint/62018/1/Goswami.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6718,7 +6718,7 @@ function recaptchaOnload() {
 						<b>An efficient multi-resolution framework for high quality interactive rendering of massive point clouds using multi-way kd-trees</b>
 						<br/>
 						 Prashant Goswami, Fatih Erol, Rahul Mukhi, Renato Pajarola, Enrico Gobbetti
-						<br/><i> The Visual Computer, pp. 69-83, Vol. 29, Num. 1  </i>, 2013 <br/>
+						<br/><i> The Visual Computer, pp. 69-83, Vol. 29, Num. 1</i>, 2013 <br/>
 						<a href="http://www.crs4.it/vic/data/papers/tvc2013-mwkdtrees.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=ZS3ITMYeMmA" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6731,7 +6731,7 @@ function recaptchaOnload() {
 						<b>Time Adaptive Approximate SPH</b>
 						<br/>
 						 Prashant Goswami, Renato Pajarola
-						<br/><i>Proceedings of Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS), pp. 19-28 </i>, 2011 <br/>
+						<br/><i>Proceedings of Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS), pp. 19-28</i>, 2011 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/VRIPHYS11_TAASPH.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=oHOMcHesMV4" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6744,7 +6744,7 @@ function recaptchaOnload() {
 						<b>Interactive SPH Simulation and Rendering on the GPU</b>
 						<br/>
 						 Prashant Goswami, Philipp Schlegel, Barbara Solenthaler, Renato Pajarola
-						<br/><i>Proceedings of ACM/Eurographics Symposium on Computer Animation (SCA), pp. 55-64,</i>, 2010 <br/>
+						<br/><i>Proceedings of ACM/Eurographics Symposium on Computer Animation (SCA), pp. 55-64</i>, 2010 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/SCA10_SPH.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=78bVk7D1Jd0" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6753,7 +6753,7 @@ function recaptchaOnload() {
 						<b>High Quality Interactive Rendering of Massive Point Models Using Multi-way kd-Trees</b>
 						<br/>
 						 Prashant Goswami, Yanci Zhang, Renato Pajarola, Enrico Gobbetti
-						<br/><i> Proceedings of 18<sup>th</sup> Pacific Conference on Computer Graphics and Applications (PG), pp. 93-100, </i>2010 <br/>
+						<br/><i> Proceedings of 18<sup>th</sup> Pacific Conference on Computer Graphics and Applications (PG), pp. 93-100</i>, 2010 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/PG_MWKDT.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=ORswin2M-F4" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6762,7 +6762,7 @@ function recaptchaOnload() {
 						<b>Scalable Parallel Out-of-Core Terrain Rendering</b>
 						<br/>
 						 Prashant Goswami, Maxim Makhinya, Jonas Bösch, Renato Pajarola
-						<br/><i>Proceedings of the 10th Eurographics conference on Parallel Graphics and Visualization (EGPGV), pp. 63-71, </i>2010 <br/>
+						<br/><i>Proceedings of the 10th Eurographics conference on Parallel Graphics and Visualization (EGPGV), pp. 63-71</i>, 2010 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/EGPGV_10.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=sKcfXHzRMfQ" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6779,7 +6779,7 @@ function recaptchaOnload() {
 						<b>RASTeR: Simple and Efficient Terrain Rendering on the GPU</b>
 						<br/>
 						Jonas Bösch, Prashant Goswami, Renato Pajarola
-						<br/><i>Proceedings of Eurographics Area Paper, pp. 35-42,</i>, 2010 <br/>
+						<br/><i>Proceedings of Eurographics Area Paper, pp. 35-42</i>, 2010 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/RASTeR_EG09.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=1rsDsg27ph0" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
