--- a/index.html
+++ b/index.html
@@ -6294,7 +6294,7 @@ function recaptchaOnload() {
 		He was a postdoc at the&nbsp;<a href="http://maverick.inria.fr/" target="_blank"><u>MAVERICK</u></a>&nbsp;group at INRIA, Grenoble (August 2013 - November 2014) where he focused on real-time landscape-size convective cloud simulation before moving to BTH.</p>
 </div>
 		</div><div id="el-64209" class="element text-element  "> 
-		<div class="text-content hasFontScale" data-fontscale="0.9"><p><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Assistant Professor</strong></span></p>
+		<div class="text-content hasFontScale" data-fontscale="0.9"><p><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Associate Professor</strong></span></p>
 
 <p><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Department of Computer Science (DIDA)</strong></span></p>
 <p><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
