--- a/Teaching.html
+++ b/Teaching.html
@@ -6193,6 +6193,8 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous (Examiner, Course responsible and Main instructor):</u></p>
+<p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2021&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.0/4.0)</p>
+<p>DV2591 : Game Engine Architecture (LP2) 2021&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.3/4.0)</p>
 <p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2020&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.20/4.0)</p>
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2020&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.0/4.0)</p> 
 <p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2019&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.20/4.0)</p>
