--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,7 +6201,6 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
-  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Linus Rosenholm </font></font></li>
 <!--  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Linus Rosenholm </font></font></li> -->
 
 </ul> 
@@ -6245,9 +6244,8 @@ function recaptchaOnload() {
 <p><u>Current:</u></p> 
 <ul> 
 
-	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonas Magnusson </font></font></li>
-	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oliver Eliardsson &amp; Oliver Ziethén </font></font></li>
-	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Zentio </font></font></li>
+<!--	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonas Magnusson </font></font></li> -->
+
 
 
  </ul> 
