--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6189,9 +6189,11 @@ function recaptchaOnload() {
 		
 <p>Editor roles in journals</p>
 <ul>
-	<li> Guest Editor: Special issue on <a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies</u></a> for Frontiers in Virtual Reality Journal</li>
+	<li> Guest Editor: Special issue on <a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies</u></a>, Frontiers in Virtual Reality Journal</li>
 	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal  </li>
 </ul>
+
+<p>&nbsp;</p>
 
 <p>I have served&nbsp;in&nbsp;the international Technical Program Committee for</p>
 
