--- a/Publications.html
+++ b/Publications.html
@@ -6698,7 +6698,7 @@ function recaptchaOnload() {
 						 Peng Song*, Chi-Wing Fu*, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or (*: joint first authors)
 						<br/><i> ACM Transactions on Graphics (TOG) - SIGGRAPH 2013 Conference Proceedings (TOG), Art. 94, Vol. 32, Num. 4</i>, 2013 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/ReciprocalFrameStructures_2013.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
-						<a href="https://www.youtube.com/watch?v=5lNQgoGB9-Q" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<a href="https://www.youtube.com/watch?v=ZYOAXITezrc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
 </ul>
