--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,7 +6201,9 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
-<!--  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Linus Rosenholm </font></font></li> -->
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Henrik Johansson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anton Åsbrink &amp; Jacob Andersson </font></font></li>
+
 
 </ul> 
 <p>&nbsp;</p> 
@@ -6244,7 +6246,14 @@ function recaptchaOnload() {
 <p><u>Current:</u></p> 
 <ul> 
 
-<!--	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonas Magnusson </font></font></li> -->
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alexander Bruce &amp; Jonathan Helsing </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alphonsa Mary Alexander Madhavan &amp; Bhavya Yaddula </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Madhan Mohan Reddy Kodtala &amp; Laxmi Prasanna Perla </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Znana Prasanna Peddinti </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nikhitha Priyadarsini Seelam &amp; Venkata Siva Sai Kumar Palisetti </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Karlos Napa Häger &amp; Rikard Lundberg </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Adam Levin &amp; Joakim Bresche </font></font></li>
+
 
 
 
