--- a/Supervision.html
+++ b/Supervision.html
@@ -6202,7 +6202,7 @@ function recaptchaOnload() {
 <p><u>Current:</u></p> 
 <ul> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Henrik Johansson </font></font></li>
- <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anton Åsbrink &amp; Jacob Andersson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anton Åsbrink &amp; Jacob Andersson @ Macaroni Studios </font></font></li>
 
 
 </ul> 
