--- a/Publications.html
+++ b/Publications.html
@@ -6427,6 +6427,29 @@ function recaptchaOnload() {
 					<div id="el-124107" class="element text-element  "> 
 		<div class="text-content"><h3><strong>Publications</strong></h3>  <br>
 		
+<h2 style="padding-left:25px;"><strong>2022</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/House3_EGPGV22.png"/>
+						<b>Iterative discrete element solver for efficient snow simulation</b>
+						<br/>
+						Prashant Goswami*, Adrian Nordin*, Simon Nylen* (* equal contribution)
+						<br/><i>To Appear, Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2022 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.youtube.com/watch?v=STh1ld8vGGw" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/VisualComp2020.png"/>
+						<b>Design of (Semi-)Autonomous Vehicles: Perceptions of the People in Sweden</b>
+						<br/>
+						 Linus Rosenholm, Prashant Goswami, Santosh Jagtap
+						<br/><i> To Appear, DESIGN 2022 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						
+						<br/><br/><br/><br/><br/>
+				</li>
+</ul>
+
+
 
 <h2 style="padding-left:25px;"><strong>2021</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
