--- a/Publications.html
+++ b/Publications.html
@@ -6442,8 +6442,8 @@ function recaptchaOnload() {
 						<b>Design of (Semi-)Autonomous Vehicles: Perceptions of the People in Sweden</b>
 						<br/>
 						 Linus Rosenholm, Prashant Goswami, Santosh Jagtap
-						<br/><i> To Appear, DESIGN 2022 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><i>1719-1726, Proceedings of the DESIGN Society 2, 2022 <br/>
+						<a href="https://www.cambridge.org/core/services/aop-cambridge-core/content/view/A0C6D303CD38B216442FEFFDA72CA22E/S2732527X22001742a.pdf/design_of_semiautonomous_vehicles_perceptions_of_the_people_in_sweden.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
 				</li>
