--- a/Publications.html
+++ b/Publications.html
@@ -6434,7 +6434,7 @@ function recaptchaOnload() {
 						<br/>
 						Prashant Goswami*, Adrian Nordin*, Simon Nylen* (* equal contribution)
 						<br/><i>To Appear, Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2022 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.diva-portal.org/smash/get/diva2:1669837/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=STh1ld8vGGw" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
