--- a/Publications.html
+++ b/Publications.html
@@ -6436,6 +6436,7 @@ function recaptchaOnload() {
 						<br/><i>Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2022 <br/>
 						<a href="https://www.diva-portal.org/smash/get/diva2:1669837/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=STh1ld8vGGw" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<a href="https://www.youtube.com/watch?v=vTVex_moQ_E&t=3540s&t=3540" target="_blank">[<font color="#0547f6">Presentation</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/DESIGN_2022.png"/>
