--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6189,7 +6189,8 @@ function recaptchaOnload() {
 		
 <p>Editor roles in journals</p>
 <ul>
-	<li> Guest Associate Editor: Special issue on <a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies</u></a>, Frontiers in Virtual Reality Journal</li>
+	<li> Guest Associate Editor: Special issue on <a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies (with Ruggero Pintus, Alberto Jaspe-Villanueva)</u></a>, Frontiers in Virtual Reality Journal (2022)</li>
+	<li> Guest Associate Editor: Special issue on <a href="https://www.mdpi.com/journal/education/special_issues/Education_VR" target="_blank"><u>Higher Education and Its Improvement through Virtual Reality (with Yan Hu)</u></a>, Education Sciences (2022-2023) </li>
 	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal  </li>
 </ul>
 
@@ -6239,6 +6240,11 @@ function recaptchaOnload() {
 	<li>Engineering Applications of Artificial Intelligence</li>
 	<li>Journal of Zhejiang University Science C Journal (Computers &amp; Electronics)</li>
 </ul>
+
+
+<h3><strong>Ph.D. Defense Committee</strong>
+
+
 </div>
 		</div> 
 	    		</div>
