--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6191,7 +6191,7 @@ function recaptchaOnload() {
 <ul>
 	<li> Guest Associate Editor: Special issue on <a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies (with Ruggero Pintus, Alberto Jaspe-Villanueva)</u></a>, Frontiers in Virtual Reality Journal (2022)</li>
 	<li> Guest Associate Editor: Special issue on <a href="https://www.mdpi.com/journal/education/special_issues/Education_VR" target="_blank"><u>Higher Education and Its Improvement through Virtual Reality (with Yan Hu)</u></a>, Education Sciences (2022-2023) </li>
-	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal  </li>
+	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal (2022-now) </li>
 </ul>
 
 <p>&nbsp;</p>
@@ -6242,8 +6242,11 @@ function recaptchaOnload() {
 </ul>
 
 
-<h3><strong>Ph.D. Defense Committee</strong>
-
+<h4><strong>Ph.D. Defense Committee</strong>
+<ul>
+	<li>Member of Grading Committee, <a href="https://www.his.se/en/about-us/events/calendar/2023/disseration-bringing-game-analytics-to-indie-game-publishing--method-and-tool-support-for-indie-mobile-game-publishing/" target="_blank"><u>Yanhui Su</u></a> </li>
+	<li>Substitute Member of Grading Committee, <a href="https://www.bth.se/nyheter/timn-nyheter/disputation-vinicius-ludwig-barbosa/" target="_blank"><u>Vinicius Ludwig Barbosa</u></a> </li>
+</ul>
 
 </div>
 		</div> 
@@ -6253,7 +6256,7 @@ function recaptchaOnload() {
 		</div>
 	</div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
