--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6242,7 +6242,7 @@ function recaptchaOnload() {
 </ul>
 
 
-<h4><strong>Ph.D. Defense Committee</strong>
+<h4><strong>Ph.D. Defense Committee</strong></h4>
 <ul>
 	<li>Member of Grading Committee, <a href="https://www.his.se/en/about-us/events/calendar/2023/disseration-bringing-game-analytics-to-indie-game-publishing--method-and-tool-support-for-indie-mobile-game-publishing/" target="_blank"><u>Yanhui Su</u></a> </li>
 	<li>Substitute Member of Grading Committee, <a href="https://www.bth.se/nyheter/timn-nyheter/disputation-vinicius-ludwig-barbosa/" target="_blank"><u>Vinicius Ludwig Barbosa</u></a> </li>
