--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6199,9 +6199,11 @@ function recaptchaOnload() {
 <p>I have served&nbsp;in&nbsp;the international Technical Program Committee for</p>
 
 <ul>
+	<li> STAG 2022 (Cagliari, Italy)</li>
+	<li> VISUAL 2022 (Venice, France)</li>
 	<li> STAG 2021 (Rome, Italy)</li>
 	<li> VISUAL 2021 (Nice, France)</li>
-	<li> STAG 2020 (Italy)</li>
+	<li> STAG 2020 (Remote mode, Italy)</li>
 	<li> VISUAL 2020 (Porto, Portugal)</li>
 	<li>VRIPHYS 2019 (Genova, Italy)</li>
 	<li>VISUAL 2019 (Rome Italy)</li>
