--- a/ResearchInterests.html
+++ b/ResearchInterests.html
@@ -6193,11 +6193,12 @@ function recaptchaOnload() {
  <li>Fluid simulation&nbsp;</li> 
  <li>Cloud animation&nbsp;</li> 
  <li>Snow simulation&nbsp;</li>
- <li>Physics-inspired, efficient procedural animations&nbsp;</li>
- <li>Parallel rendering&nbsp;</li> 
- <li>Artificial Intelligence&nbsp;</li> 
+ <li>Other material simulations&nbsp;</li>
+ <li>Efficient physics-inspired, procedural animations&nbsp;</li>
+ <li>Parallel rendering and animation&nbsp;</li> 
+ <li>Applied Artificial Intelligence in CG&nbsp;</li> 
  <li>Game design and Artificial Intelligence in Games&nbsp;</li> 
-  <li>Geometric modeling&nbsp;</li> 
+ <li>Geometric modeling&nbsp;</li> 
 </ul> 
 <p><br> I am always open to experiment on new and exciting topics. I have co-supervised PhD students on traffic data analysis and eHealth.</p> 
 <p><u><strong>Publications</strong></u></p> 
