--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6245,7 +6245,9 @@ function recaptchaOnload() {
 
 
 
-
+p {
+    padding-bottom: 3cm;
+}
 <h4><strong>Ph.D. Defense Committee</strong></h4>
 
 <ul>
